tests/baselines/reference/conditionalExpressionNewLine3.errors.txt
conditionalExpressionNewLine3.ts(1,9): error TS2304: Cannot find name 'a'.
conditionalExpressionNewLine3.ts(2,3): error TS2304: Cannot find name 'b'.
conditionalExpressionNewLine3.ts(2,7): error TS2304: Cannot find name 'c'.


==== conditionalExpressionNewLine3.ts (3 errors) ====
    var v = a ?
            ~
!!! error TS2304: Cannot find name 'a'.
      b : c;
      ~
!!! error TS2304: Cannot find name 'b'.
          ~
!!! error TS2304: Cannot find name 'c'.